--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,8 @@
     "knex": "^3.1.0",
     "nodemon": "^3.1.9",
     "pg": "^8.2.0",
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "ua-parser-js": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
